<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/nav_map" />
    
    <item
        android:id="@+id/nav_feed"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_feed" />
    
    <item
        android:id="@+id/nav_groups"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_groups" />
    
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chat" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
